--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,6 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
   },
@@ -21,6 +20,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "sass": "^1.54.3",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
   }
